fixing the issue wiht swaggo
